fix: prepend prefix flex- before start and end values of justify-content and align-items

--- a/src/v2/styles/AttachmentList/AttachmentList-layout.scss
+++ b/src/v2/styles/AttachmentList/AttachmentList-layout.scss
@@ -106,7 +106,7 @@
       width: 100%;
       display: flex;
       flex-direction: column;
-      align-items: start;
+      align-items: flex-start;
       justify-content: center;
       row-gap: var(--str-chat__spacing-0_5);
       min-width: 0;
