--- a/src/v2/styles/AttachmentPreviewList/AttachmentPreviewList-layout.scss
+++ b/src/v2/styles/AttachmentPreviewList/AttachmentPreviewList-layout.scss
@@ -55,7 +55,7 @@
       @include utils.ellipsis-text-parent;
       display: flex;
       flex-direction: column;
-      align-items: start;
+      align-items: flex-start;
       justify-content: center;
 
       .str-chat__attachment-preview-file-name {
