--- a/src/v2/styles/MessageReactions/MessageReactions-layout.scss
+++ b/src/v2/styles/MessageReactions/MessageReactions-layout.scss
@@ -47,12 +47,12 @@
 
 .str-chat__message--me {
   .str-chat__message-reactions-container {
-    justify-content: end;
+    justify-content: flex-end;
   }
 }
 
 .str-chat__message--other {
   .str-chat__message-reactions-container {
-    justify-content: start;
+    justify-content: flex-start;
   }
 }
